--- a/src/manifest.json
+++ b/src/manifest.json
@@ -7,6 +7,12 @@
       "type": "image/png",
       "density": 0.75
     },
+    {
+      "src": "launcher-icon-4x.png",
+      "sizes": "192x192",
+      "type": "image/png",
+      "density": 4.0
+    }
   ],
   "start_url": "index.html",
   "display": "standalone",
