--- a/.travis.yml
+++ b/.travis.yml
@@ -1,27 +1,10 @@
 language: node_js
 node_js:
-  - "4.1"
-
-cache:
-  directories:
-    - sysconfcpus
-
+  - "5"
 install:
-  - npm install -g elm@~0.18.0 casperjs http-server
+  - npm install -g elm@~0.18.0
+  - npm install -g elm-test
   - elm-package install -y
-  - |
-    if [ ! -d sysconfcpus/bin ];
-    then
-      git clone https://github.com/obmarg/libsysconfcpus.git;
-      cd libsysconfcpus;
-      ./configure --prefix=$TRAVIS_BUILD_DIR/sysconfcpus;
-      make && make install;
-      cd ..;
-    fi
-before_script:
-  - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make ./src/elm/TestRunner.elm --output test.html
-  - http-server '.' &
-  # Wait for compilation is done.
-  - until $(curl --output /dev/null --silent --head --fail http://127.0.0.1:8080/test.html); do echo "." && sleep 1; done
-
-script: casperjs test runTests.js
+  - pushd tests && elm-package install -y && popd
+script:
+  - elm-test ./src/elm/TestRunner.elm
