--- a/.travis.yml
+++ b/.travis.yml
@@ -2,8 +2,9 @@ sudo: false
 
 cache:
   directories:
-    - tests/elm-stuff/build-artifacts
-
+    - elm-stuff/build-artifacts
+    - elm-stuff/packages
+    - sysconfcpus
 os:
   - linux
 
@@ -22,6 +23,17 @@ install:
   - npm install -g elm@$ELM_VERSION elm-test
   - git clone https://github.com/NoRedInk/elm-ops-tooling
   - elm-ops-tooling/with_retry.rb elm package install --yes
+  - |
+    if [ ! -d sysconfcpus/bin ];
+    then
+      git clone https://github.com/obmarg/libsysconfcpus.git;
+      cd libsysconfcpus;
+      ./configure --prefix=$TRAVIS_BUILD_DIR/sysconfcpus;
+      make && make install;
+      cd ..;
+    fi
+before_script:
+  - $TRAVIS_BUILD_DIR/sysconfcpus/bin/sysconfcpus -n 2 elm-make ./src/elm/TestRunner.elm
 
 script:
   - elm-test ./src/elm/TestRunner.elm
